--- a/templates/complexity_table.html
+++ b/templates/complexity_table.html
@@ -779,6 +779,8 @@
                                 {{ file.percentage_reduction }}% <i class="fas fa-arrow-down"></i>
                             {% else %}
                                 No improvement
+                                <br>
+                                <small style="font-size: 1rem; color: #a0a0a0;">Cleaner and modular code</small>
                             {% endif %}
                         </h4>
                     </div>
@@ -803,7 +805,7 @@
                             {
                                 theme: "vs-dark",
                                 automaticLayout: true,
-                                readOnly: true
+                                readOnly: true,
                             }
                         );
 
