--- a/templates/complexityC_table.html
+++ b/templates/complexityC_table.html
@@ -506,9 +506,9 @@
                             {% if file.percentage_reduction > 0 %}
                                 {{ file.percentage_reduction }}% <i class="fas fa-arrow-down"></i>
                             {% else %}
-                                No improvement
+                                <span style="font-size: 1rem;">No improvement</span>
                                 <br>
-                                <small style="font-size: 1rem; color: #a0a0a0;">Cleaner and modular code</small>
+                                <small style="font-size: 1rem; color: greenyellow;">Provide Cleaner and modular code</small>
                             {% endif %}
                         </h4>
                     </div>
